--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
                               </div>
                               <div class="span8">
                                   <div class="row">
-                                      <h5 class="job-title">Senior Software Development Engineer Intern</h5>
-                                      <ul class="job-duties">
-                                          <li>Worked on Identity team on Login With Amazon OAuth provider service</li> 
-                                          <li>Designed and developed unreleased Login With Amazon features</li>
-                                          <li>Helped mentor new Software Development Engineer interns</li>
-                                      </ul>
+                                      <div class="span12">
+                                          <h5 class="job-title">Senior Software Development Engineer Intern</h5>
+                                          <ul class="job-duties">
+                                              <li>Worked on Identity team on Login With Amazon OAuth provider service</li> 
+                                              <li>Designed and developed unreleased Login With Amazon features</li>
+                                              <li>Helped mentor new Software Development Engineer interns</li>
+                                          </ul>
+                                      </div>
                                   </div>
                                   <div class="row job-skills">
                                       <div class="span12">
