Added quotes around senior. @jdavis

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                               <div class="span8">
                                   <div class="row">
                                       <div class="span12">
-                                          <h5 class="job-title">Senior Software Development Engineer Intern</h5>
+                                          <h5 class="job-title">"Senior" Software Development Engineer Intern</h5>
                                           <ul class="job-duties">
                                               <li>Worked on Identity team on Login With Amazon OAuth provider service</li> 
                                               <li>Designed and developed unreleased Login With Amazon features</li>
