--- a/index.html
+++ b/index.html
@@ -22,18 +22,16 @@
           <div id="header-container" class="row resume-section">
               <div class="span8">
                   <div class="row">
-                      <div class="span4">
+                      <div class="span8">
                           <h1 id="name-header">Zachary Wolfe</h1>
                           <span id="edited-date">Summer 2013</span>
                       </div>
                   </div>
                   <div id="contact-info-container" class="row">
                       <ul class="span12">
+                          <li><i class="icon-home"></i><span>State College, PA</span></li>
                           <li><i class="icon-envelope"></i><span>wolfe.zach@gmail.com</span></li>
-                          <li><i class="icon-phone"></i>
-                            <span>(412) 420 4774</span>
-                          </li>
-                          <li><i class="icon-home"></i><span>Pittsburgh, PA</span></li>
+                          <li><i class="icon-github"></i><span>github.com/zdwolfe</span></li>
                       </ul>
                   </div>
               </div>
@@ -58,11 +56,11 @@
                               <div class="span8">
                                   <div class="row">
                                       <div class="span12">
-                                          <h5 class="job-title">"Senior" Software Development Engineer Intern</h5>
+                                          <h5 class="job-title">Senior Software Development Engineer Intern</h5>
                                           <ul class="job-duties">
-                                              <li>Worked on Identity team on Login With Amazon OAuth provider service</li> 
+                                              <li>Worked with Identity team on Login With Amazon OAuth provider service</li> 
                                               <li>Designed and developed unreleased Login With Amazon features</li>
-                                              <li>Helped mentor new Software Development Engineer interns</li>
+                                              <li>Assisted first-year SDE Interns</li>
                                           </ul>
                                       </div>
                                   </div>
@@ -93,9 +91,8 @@
                                       <div class="span12">
                                           <h5 class="job-title">Software Development Engineer Intern</h5>
                                           <ul class="job-duties">
-                                              <li>Implemented latency reduction of Amazon Sign In pages</li>
-                                              <li>Personally generated and produced $90,000 in revenue</li>
-                                              <li>Managed twelve full-time and two part-time employees</li>
+                                              <li>Achieved latency reduction goal of Amazon Sign In pages</li>
+                                              <li>Localized US Sign In pages for use in other regions</li>
                                           </ul>
                                       </div>
                                   </div>
@@ -125,7 +122,7 @@
                                       <div class="span12">
                                           <h5 class="job-title">Software Engineer Co-Op</h5>
                                           <ul class="job-duties">
-                                              <li>Development of GUI for handheld, commercial network test devices.</li>
+                                              <li>Development of GUI for handheld, commercial network test devices</li>
                                               <li>Involved with UI/UX team developing technician-friendly configuration wizards</li>
                                           </ul>
                                       </div>
@@ -188,8 +185,8 @@
                                           <h5 class="job-title">Branch Manager</h5>
                                           <ul class="job-duties">
                                               <li>Franchise manager of exterior house painting company</li>
-                                              <li>Hired and managed twelve employees</li>
-                                              <li>Gained revenues in excess of $90,000</li>
+                                              <li>Hired and oversaw twelve employees</li>
+                                              <li>Gained revenues in excess of $90k</li>
                                           </ul>
                                       </div>
                                   </div>
@@ -197,7 +194,7 @@
                                       <div class="span12">
                                           <ul>
                                               <li><div class="well">Presentation</div></li>
-                                              <li><div class="well">Estimation</div></li>
+                                              <li><div class="well">Contract Estimation</div></li>
                                               <li><div class="well">Accounting</div></li>
                                               <li><div class="well">Management</div></li>
                                           </ul>
@@ -237,9 +234,9 @@
                   </div>
                   <div class="row">
                       <ul>
-                        <li>Participant of Facebook Seattle Hackathon, 2013</li>
-                        <li>Participant of HackPSU Hackathon, 2013</li>
-                        <li>Participant of MHacks Hackathon, 2013</li>
+                        <li>Participant of Facebook Summer Of Hack 2013</li>
+                        <li>Participant of HackPSU 2013</li>
+                        <li>Participant of MHacks 2013</li>
                         <li>Member of InnoBlue Start-Up Accelerator, 2012 - present</li>
                         <li>Winner of Penn State IdeaPitch Entrepreneurship Competition, First Prize, 2011</li>
                       </ul>
