Update with SDE

--- a/resume2.html
+++ b/resume2.html
@@ -20,19 +20,19 @@
       <div id="page-content" class="span8 vcontainer">
           <div id="header-container" class="row resume-section">
             <div class="span8">
-<div class="row">
-    <div class="span8">
-        <h1 id="name-header">Zachary Wolfe</h1>
-        <span id="edited-date">Winter 2014</span>
-    </div>
-</div>
-<div id="contact-info-container" class="row">
-    <ul class="span12">
-        <li><i class="icon-home"></i><span>Seattle, WA</span></li>
-        <li><i class="icon-envelope"></i><span>wolfe.zach@gmail.com</span></li>
-        <li><i class="icon-linkedin"></i><span>linkedin.com/in/zdwolfe</span></li>
-    </ul>
-</div>
+  <div class="row">
+      <div class="span8">
+          <h1 id="name-header">Zachary Wolfe</h1>
+          <span id="edited-date">Winter 2014</span>
+      </div>
+  </div>
+  <div id="contact-info-container" class="row">
+      <ul class="span8">
+          <li><i class="icon-home"></i><span>Seattle, WA</span></li>
+          <li><i class="icon-envelope"></i><span>wolfe.zach@gmail.com</span></li>
+          <li><i class="icon-linkedin"></i><span>linkedin.com/in/zdwolfe</span></li>
+      </ul>
+  </div>
 </div>
 
           </div>
@@ -75,7 +75,7 @@
             <div class="span12">
     <div class="row">
         <div class="span12">
-            <h2>Extracurricular Activities</h2>
+            <h2>Activities</h2>
         </div>
     </div>
     <div class="row">
@@ -83,7 +83,7 @@
           <li>Participant of Facebook Summer Of Hack 2013</li>
           <li>Participant of HackPSU 2013</li>
           <li>Participant of MHacks 2013</li>
-          <li>Member of InnoBlue Start-Up Accelerator, 2012 - present</li>
+          <li>Member of InnoBlue Start-Up Accelerator, 2012 - 2013</li>
           <li>Winner of Penn State IdeaPitch Entrepreneurship Competition, First Prize, 2011</li>
         </ul>
     </div>
