--- a/app/index.html
+++ b/app/index.html
@@ -1,33 +1,33 @@
 <!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>resume</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>resume</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild-->
 
-  <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild-->
+    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+    <!-- build:vulcanized elements/elements.vulcanized.html -->
+    <link rel="import" href="elements/elements.html">
+    <!-- endbuild-->
+  </head>
 
-  <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-  <!-- build:vulcanized elements/elements.vulcanized.html -->
-  <link rel="import" href="elements/elements.html">
-  <!-- endbuild-->
-</head>
-
-<body unresolved>
-  <template id="app" is="auto-binding">
+  <body unresolved>
     <core-animated-pages id="pages" selected="{{selected}}" transitions="cross-fade">
       <section layout vertical>
         <positions-list class="page" id="positions" positions="{{positions}}" cross-fade?="{{largeScreen}}" heading="{{heading}}" flex>
         </positions-list>
       </section>
     </core-animated-pages>
-  </template>
-</body>
 
+    <!-- build:js scripts/app.js -->
+    <script src="scripts/app.js"></script>
+    <!-- endbuild-->
+  </body>
 </html>
