--- a/app/index.html
+++ b/app/index.html
@@ -19,15 +19,7 @@
   </head>
 
   <body unresolved>
-    <core-animated-pages id="pages" selected="{{selected}}" transitions="cross-fade">
-      <section layout vertical>
-        <positions-list class="page" id="positions" positions="{{positions}}" cross-fade?="{{largeScreen}}" heading="{{heading}}" flex>
-        </positions-list>
-      </section>
-    </core-animated-pages>
-
-    <!-- build:js scripts/app.js -->
-    <script src="scripts/app.js"></script>
-    <!-- endbuild-->
+    <positions-list>
+    </positions-list>
   </body>
 </html>
