--- a/app/elements/positions-list/positions-list.html
+++ b/app/elements/positions-list/positions-list.html
@@ -1,9 +1,12 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-shadow/paper-shadow.html">
 
 <polymer-element name="positions-list" attributes="">
   <template>
     <link rel="stylesheet" href="positions-list.css">
-    <div>hi<div>
+    <paper-shadow z="1" animated="true" class="position-card">
+      hello
+    </paper-shadow>
   </template>
   <script>
     (function () {
